fix: fix page overflow x

--- a/styles/Styles.css
+++ b/styles/Styles.css
@@ -138,6 +138,7 @@
 }
 
 body {
+  overflow-x: hidden;
   font-family: 'Poppins Regular', serif;
 }
 
